Code Insights: Fix insight tooltip overflow layout problem (#32331)
* Fix tooltip text overflow problem

* Fix legend items overflow layout problem

--- a/client/web/src/views/components/view/content/chart-view-content/charts/line/components/tooltip-content/TooltipContent.module.scss
+++ b/client/web/src/views/components/view/content/chart-view-content/charts/line/components/tooltip-content/TooltipContent.module.scss
@@ -20,6 +20,8 @@
 
 .legend-text {
     flex-grow: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .legend-value {
